crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF046_RUF046_CR.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF046_CR.py:1:1: RUF046 (unnecessary-cast-to-int) [*] Value being cast to `int` is already an integer
  |
1 | int(-    1) # Carriage return as newline
  | ^^^^^^^^^^^ RUF046 (unnecessary-cast-to-int)
  |
  = help: Remove unnecessary `int` call

ℹ Safe fix
1   |-int(-  1 |+(-2 2 |     1) # Carriage return as newline
