crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF046_RUF046_LF.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF046_LF.py:2:1: RUF046 (unnecessary-cast-to-int) [*] Value being cast to `int` is already an integer
  |
1 |   # \n as newline
2 | / int(-
3 | |     1)
  | |______^ RUF046 (unnecessary-cast-to-int)
  |
  = help: Remove unnecessary `int` call

ℹ Safe fix
1 1 | # \n as newline
2   |-int(-
  2 |+(-
3 3 |     1)
