crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF047_RUF047_while.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF047_while.py:6:1: RUF047 (needless-else) [*] Empty `else` clause
  |
4 |       loop_body_is_not_checked()
5 |       break
6 | / else:
7 | |     pass
  | |________^ RUF047 (needless-else)
  |
  = help: Remove the `else` clause

ℹ Safe fix
3 3 | while True:
4 4 |     loop_body_is_not_checked()
5 5 |     break
6   |-else:
7   |-    pass
8 6 | 
9 7 | 
10 8 | while this_comment:

RUF047_while.py:12:1: RUF047 (needless-else) [*] Empty `else` clause
   |
10 |   while this_comment:
11 |       belongs_to()  # `for`
12 | / else:
13 | |     ...
   | |_______^ RUF047 (needless-else)
   |
   = help: Remove the `else` clause

ℹ Safe fix
9  9  | 
10 10 | while this_comment:
11 11 |     belongs_to()  # `for`
12    |-else:
13    |-    ...
14 12 | 
15 13 | 
16 14 | while of_course():
