crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF048_RUF048.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF048.py:4:7: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
  |
4 | tuple(map(int, __version__.split(".")))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
5 | list(map(int, __version__.split(".")))
  |

RUF048.py:5:6: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
  |
4 | tuple(map(int, __version__.split(".")))
5 | list(map(int, __version__.split(".")))
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
6 |
7 | # `sep` passed as keyword argument
  |

RUF048.py:8:13: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
  |
7 | # `sep` passed as keyword argument
8 | for part in map(int, __version__.split(sep=".")):
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
9 |     print(part)
  |
