crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF048_RUF048_1.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF048_1.py:5:7: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
  |
5 | tuple(map(int, __version__.split(".")))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
6 | list(map(int, __version__.split(".")))
7 | tuple(map(int, bar.__version__.split(".")))
  |

RUF048_1.py:6:6: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
  |
5 | tuple(map(int, __version__.split(".")))
6 | list(map(int, __version__.split(".")))
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
7 | tuple(map(int, bar.__version__.split(".")))
8 | list(map(int, bar.__version__.split(".")))
  |

RUF048_1.py:7:7: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
  |
5 | tuple(map(int, __version__.split(".")))
6 | list(map(int, __version__.split(".")))
7 | tuple(map(int, bar.__version__.split(".")))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
8 | list(map(int, bar.__version__.split(".")))
  |

RUF048_1.py:8:6: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
   |
 6 | list(map(int, __version__.split(".")))
 7 | tuple(map(int, bar.__version__.split(".")))
 8 | list(map(int, bar.__version__.split(".")))
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
 9 |
10 | # `sep` passed as keyword argument
   |

RUF048_1.py:11:13: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
   |
10 | # `sep` passed as keyword argument
11 | for part in map(int, bar.__version__.split(sep=".")):
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
12 |     print(part)
   |

RUF048_1.py:14:13: RUF048 (map-int-version-parsing) `__version__` may contain non-integral-like elements
   |
12 |     print(part)
13 |
14 | for part in map(int, __version__.split(sep=".")):
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF048 (map-int-version-parsing)
15 |     print(part)
   |
